# Advanced-Systems-Lab

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
Naive/irfan/: main  main.c
Naive/patrick/: .clang-format  .gitignore  Makefile  main.cpp
benchmark/: box_100.py  create_scene.py  create_scene_all_shapes.py  helper.py  sphere_100.py
include/: geometry.h  instrument.h  loader.h  timing.h  util.h
include/impl_normals/: impl.hpp
include/impl_opt0/: impl.hpp
include/impl_opt1/: geometry.h  impl.hpp  scene.hpp
include/impl_opt2/: geometry.h  impl.hpp  scene.hpp
include/impl_opt3/: geometry.h  impl.hpp  scene.hpp
include/impl_opt4/: geometry.h  impl.hpp  scene.hpp
include/impl_opt5/: geometry.h  impl.hpp  scene.hpp
include/impl_ref/: geometry.h  impl.hpp  scene.hpp
include/impl_vec0/: geometry.h  impl.hpp  scene.hpp
include/impl_vec1/: geometry.h  impl.hpp  scene.hpp
include/impl_vec2/: geometry.h  impl.hpp  scene.hpp
include/impl_vec3/: geometry.h  impl.hpp  scene.hpp
include/impl_vec4/: geometry.h  impl.hpp  scene.hpp
perf/: README.md  pres-flamegraph-opt1-box.stacks
plots/: README.md  bench-compiler-flags.json  bench-flags.json  bench-large.json  bench.json  common.plt  flops.plt  perf.plt  pres-flops.plt  pres-perf.plt  pres-seconds.plt  presentation.plt  rep-common.plt  rep-flops-hist.plt  rep-flops.plt  rep-perf.plt  rep-seconds-flags.plt  rep-seconds-vect.plt  rep-seconds.plt  size-perf.plt  size-time.plt  speedup.plt
report/: bibl_conf.bib  report.tex
report/Figures/: sphere_tracing_illustration.eps
scenes/: scene0.json  scene3.json
scenes/benchmark_small/: all.json  boxes.json  cones.json  octahedra.json  spheres.json  tori.json
scripts/: all_flamegraph.sh  bench.py  bench_runner.py  bench_small.sh  build.sh  flamegraph.sh  gen_flops_plot_data.py  gen_plot_data.py  gen_plots.sh  pdf2png.sh  run_all_benchmarks.sh
src/: geometry.cpp  loader.cpp  main.cpp  timing.cpp  util.cpp
src/impl_normals/: impl.cpp
src/impl_opt0/: README.md  impl.cpp
src/impl_opt1/: README.md  impl.cpp  scene.cpp
src/impl_opt2/: README.md  geometry.cpp  impl.cpp  scene.cpp
src/impl_opt3/: README.md  geometry.cpp  impl.cpp  scene.cpp
src/impl_opt4/: README.md  geometry.cpp  impl.cpp  scene.cpp
src/impl_opt5/: README.md  geometry.cpp  impl.cpp  scene.cpp
src/impl_ref/: geometry.cpp  impl.cpp  main.cpp  scene.cpp
src/impl_vec0/: README.md  geometry.cpp  impl.cpp  scene.cpp
src/impl_vec1/: README.md  geometry.cpp  impl.cpp  scene.cpp
src/impl_vec2/: README.md  geometry.cpp  impl.cpp  scene.cpp
src/impl_vec3/: README.md  geometry.cpp  impl.cpp  scene.cpp
src/impl_vec4/: README.md  geometry.cpp  impl.cpp  scene.cpp
